fix jobview input heights cut off

--- a/app/assets/styles/jobview.css
+++ b/app/assets/styles/jobview.css
@@ -206,7 +206,7 @@ hr {
 .parameters input {
     text-shadow: 0 0 0 #878787;
     /*width: 15em;*/
-    height: 2.3em;
+    height: 2.7em;
     border: solid lightgray;
     border-width: 0 0 1px 0;
     box-shadow: none;
